--- a/dev/service.yaml
+++ b/dev/service.yaml
@@ -3,12 +3,14 @@ kind: CronJob
 metadata:
   name: user-session-cron-job
 spec:
-  schedule: "0 * * * *"
+  schedule: "0 0 * * *"
+  concurrencyPolicy: Forbid
   timezone: "Pacific/Pitcairn"
   jobTemplate:
     spec:
       template:
         spec:
+          serviceAccountName: user-session-cron-account
           containers:
           - name: user-session-cron-job
             image: gcr.io/phading-dev/user-session-cron-job:latest
